<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    tools:context=".DetailActivity">    <ImageView        android:id="@+id/ivDetail"        android:layout_width="0dp"        android:layout_height="200dp"        android:layout_marginStart="20dp"        android:layout_marginLeft="20dp"        android:scaleType="centerCrop"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toStartOf="@+id/tvTittle"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.037"        app:srcCompat="@drawable/ic_launcher_background" />    <TextView        android:id="@+id/tvDirector"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginStart="20dp"        android:layout_marginLeft="20dp"        android:layout_marginTop="20dp"        android:text="@string/director"        android:textSize="20sp"        android:textStyle="bold"        app:layout_constraintEnd_toStartOf="@+id/tvOriginalLanguage"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/ivDetail" />    <TextView        android:id="@+id/tvStatus"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="25dp"        android:text="@string/status"        android:textSize="20sp"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="@+id/tvDirector1"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="@+id/tvDirector1"        app:layout_constraintTop_toBottomOf="@+id/tvDirector1" />    <TextView        android:id="@+id/tvOriginalLanguage"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginStart="2dp"        android:layout_marginLeft="2dp"        android:layout_marginTop="20dp"        android:layout_marginEnd="20dp"        android:layout_marginRight="20dp"        android:text="@string/original_language"        android:textSize="20sp"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toEndOf="@+id/tvDirector"        app:layout_constraintTop_toBottomOf="@+id/ivDetail" />    <TextView        android:id="@+id/tvRuntime"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="25dp"        android:text="@string/runtime"        android:textSize="20sp"        android:textStyle="bold"        app:layout_constraintEnd_toEndOf="@+id/tvOriginalLanguage1"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="@+id/tvOriginalLanguage1"        app:layout_constraintTop_toBottomOf="@+id/tvOriginalLanguage1" />    <TextView        android:id="@+id/tvOverview"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginBottom="16dp"        android:text="@string/overview"        android:textSize="20sp"        android:textStyle="bold"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="@+id/tvStatus1"        app:layout_constraintTop_toBottomOf="@+id/tvStatus1"        app:layout_constraintVertical_bias="0.28" />    <TextView        android:id="@+id/tvDirector1"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="5dp"        android:text="@string/director"        app:layout_constraintEnd_toStartOf="@+id/tvOriginalLanguage1"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="@+id/tvDirector"        app:layout_constraintTop_toBottomOf="@+id/tvDirector" />    <TextView        android:id="@+id/tvOriginalLanguage1"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="5dp"        android:text="@string/original_language"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="@+id/tvOriginalLanguage"        app:layout_constraintTop_toBottomOf="@+id/tvOriginalLanguage" />    <TextView        android:id="@+id/tvOverview1"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="20dp"        android:layout_marginLeft="20dp"        android:layout_marginTop="5dp"        android:text="@string/overview"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/tvOverview"        app:layout_constraintVertical_bias="0.0" />    <TextView        android:id="@+id/tvStatus1"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="5dp"        android:text="@string/status"        app:layout_constraintStart_toStartOf="@+id/tvStatus"        app:layout_constraintTop_toBottomOf="@+id/tvStatus" />    <TextView        android:id="@+id/tvRuntime1"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginTop="5dp"        android:text="@string/runtime"        app:layout_constraintBottom_toTopOf="@+id/tvOverview"        app:layout_constraintStart_toStartOf="@+id/tvRuntime"        app:layout_constraintTop_toBottomOf="@+id/tvRuntime"        app:layout_constraintVertical_bias="0.0" />    <TextView        android:id="@+id/tvTittle"        android:layout_width="0dp"        android:layout_height="wrap_content"        android:layout_marginStart="20dp"        android:layout_marginLeft="20dp"        android:layout_marginTop="16dp"        android:text="@string/tittle"        android:textSize="20sp"        android:textStyle="bold"        app:layout_constraintBottom_toTopOf="@+id/tvOriginalLanguage"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toEndOf="@+id/ivDetail"        app:layout_constraintTop_toTopOf="parent"        app:layout_constraintVertical_bias="0.01999998" /></androidx.constraintlayout.widget.ConstraintLayout>